fixing dark mode issue on the first page

--- a/website/_sass/_styles.scss
+++ b/website/_sass/_styles.scss
@@ -2,12 +2,55 @@
 
 // Variable overrides first
 $primary: $primary-color;
+$secondary: $secondary-color;
 $enable-shadows: true;
-$prefix: "mo-";
+$prefix: "pa-";
 
-// Then import Bootstrap
-@import "../../node_modules/bootstrap/scss/bootstrap";
+// Required
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/variables-dark";
+@import "../../node_modules/bootstrap/scss/maps";
+@import "../../node_modules/bootstrap/scss/mixins";
+@import "../../node_modules/bootstrap/scss/utilities";
+@import "../../node_modules/bootstrap/scss/root";
+@import "../../node_modules/bootstrap/scss/reboot";
 
+@import "../../node_modules/bootstrap/scss/type";
+@import "../../node_modules/bootstrap/scss/images";
+@import "../../node_modules/bootstrap/scss/containers";
+@import "../../node_modules/bootstrap/scss/grid";
+@import "../../node_modules/bootstrap/scss/tables";
+// @import "../../node_modules/bootstrap/scss/forms";
+@import "../../node_modules/bootstrap/scss/buttons";
+@import "../../node_modules/bootstrap/scss/transitions";
+@import "../../node_modules/bootstrap/scss/dropdown";
+// @import "../../node_modules/bootstrap/scss/button-group";
+@import "../../node_modules/bootstrap/scss/nav";
+@import "../../node_modules/bootstrap/scss/navbar"; // Requires nav
+// @import "../../node_modules/bootstrap/scss/card";
+// @import "../../node_modules/bootstrap/scss/breadcrumb";
+// @import "../../node_modules/bootstrap/scss/accordion";
+// @import "../../node_modules/bootstrap/scss/pagination";
+// @import "../../node_modules/bootstrap/scss/badge";
+@import "../../node_modules/bootstrap/scss/alert";
+// @import "../../node_modules/bootstrap/scss/progress";
+// @import "../../node_modules/bootstrap/scss/list-group";
+// @import "../../node_modules/bootstrap/scss/close";
+// @import "../../node_modules/bootstrap/scss/toasts";
+// @import "../../node_modules/bootstrap/scss/modal"; // Requires transitions
+@import "../../node_modules/bootstrap/scss/tooltip";
+// @import "../../node_modules/bootstrap/scss/popover";
+// @import "../../node_modules/bootstrap/scss/carousel";
+// @import "../../node_modules/bootstrap/scss/spinners";
+// @import "../../node_modules/bootstrap/scss/offcanvas"; // Requires transitions
+// @import "../../node_modules/bootstrap/scss/placeholders";
+
+// Helpers
+// @import "../../node_modules/bootstrap/scss/helpers";
+
+// Utilities
+@import "../../node_modules/bootstrap/scss/utilities/api";
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -79,38 +122,6 @@ h1 {
   padding: 0;
   margin: 16px;
   box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
-
-  &.btn-more {
-    color: $primary-color;
-    border-color: $primary-color;
-
-    &:hover {
-      background-color: $primary-color;
-      color: $bg-color  !important;
-    }
-  }
-
-  &.btn-faq {
-    border-color: $primary-color;
-    background-color: $primary-color;
-    color: $bg-color;
-
-    &:hover {
-      background-color: $primary-color;
-      color: $bg-color  !important;
-    }
-  }
-
-  &.btn-community {
-    border-color: $community-color;
-    background-color: $community-color;
-    color: $bg-color  !important;
-
-    &:hover {
-      background-color: $community-color;
-      color: $bg-color  !important;
-    }
-  }
 }
 
 .footer {
