--- a/website/_sass/_vars.scss
+++ b/website/_sass/_vars.scss
@@ -1,11 +1,11 @@
 $primary-color: #021a34;
-$secondary-color: #23547b;
+$secondary-color: #075f94;
 $bg-color: #edeef0;
 $font-color: #4c4c4c;
-$community-color: #075f94;
 
-$primary-color-dark: #ff7e00;
-$secondary-color-dark: #ff4500;
+$primary-color-dark: #edeef0;
+$secondary-color-dark: #075f94;
 $bg-color-dark: #0c0d0e;
-$font-color-dark: #ffffff;
-$community-color-dark: #00a9e0;
+$bg-color-dark-2: #212529;
+$font-color-dark: #edeef0;
+
